# barbican

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  codeql.yml  docs.yml  fuzz.yml  release.yml  update-homebrew-tap.yml
book/: book.toml
book/src/: SUMMARY.md  classifiers.md  configuration.md  install.md  introduction.md  license.md  security.md
crates/barbican/: Cargo.toml
crates/barbican/fuzz/: Cargo.toml  rust-toolchain.toml
crates/barbican/fuzz/corpus/classify/: allow_cat_readme  allow_cmdsub_benign  allow_env_var_set  allow_find_name  allow_grep  allow_pipe_grep_wc  chmod_tmp_exec  git_config_pager_rce  h1_absolute_bash  h1_cmdsub_bash  h1_curl_pipe_bash  h1_here_string  h1_heredoc_body  h1_procsub_bash  h1_source_stdin  h1_wget_sh  h2_base64_decode_exec  h2_base64_write_script  m1_find_exec  m1_sudo_curl_bash  m1_timeout_curl  m2_dns_exfil  m2_env_dump_exfil  m2_reverse_shell  m2_secret_exfil_curl  persistence_bashrc  scripting_lang_shellout
crates/barbican/fuzz/corpus/parse/: and_or  ansi_c  assignment  cmdsub  heredoc  herestring  pipeline  procsub  redirect
crates/barbican/fuzz/corpus/safe_fetch_redirect/: hop_bracketed_v6  hop_crlf_injection  hop_fragment_relative  hop_protocol_relative  hop_scheme_change  hop_trailing_dot  hop_userinfo_at
crates/barbican/fuzz/corpus/safe_read_policy/: allow_plain_home_readme  allow_tilde_expanded  aws_credentials  case_fold_ssh_upper  dotenv_bak  double_slash_normalize  etc_sudoers_slash  traversal_etc_shadow
crates/barbican/fuzz/corpus/unwrap_wrappers/: m1_bash_c_multi_clauses  m1_docker_run_shell  m1_find_exec_sh_c  m1_nested_sudo_timeout_bash  m1_no_wrapper_plain_ls  m1_sudo_curl_bash  m1_timeout_bash_c  m1_xargs_bash_c
crates/barbican/fuzz/corpus/validate_url/: example_http  gopher  v4_mapped_v6
crates/barbican/fuzz/fuzz_targets/: classify.rs  parse.rs  safe_fetch_redirect.rs  safe_read_policy.rs  unwrap_wrappers.rs  validate_url.rs
crates/barbican/src/: audit_io.rs  cmd.rs  installer.rs  lib.rs  main.rs  net.rs  parser.rs  quoting.rs  redact.rs  sanitize.rs  scan.rs  tables.rs
crates/barbican/src/hooks/: audit.rs  mod.rs  post_advisory.rs  post_edit.rs  post_mcp.rs  pre_bash.rs
crates/barbican/src/mcp/: inspect.rs  mod.rs  safe_fetch.rs  safe_read.rs  server.rs  wrap.rs
crates/barbican/src/wrappers/: mod.rs
crates/barbican/tests/: audit.rs  explain.rs  fuzz_properties.proptest-regressions  fuzz_properties.rs  inspect.rs  install.rs  linux_crash_bisect.rs  linux_repro.rs  parser.rs  post_advisory_audit_symlink.rs  post_advisory_injection.rs  post_edit.rs  post_mcp.rs  pre_bash_1_5_1.rs  pre_bash_h1.rs  pre_bash_h2.rs  pre_bash_m1.rs  pre_bash_m2.rs  safe_fetch.rs  safe_read.rs  sanitize_1_5_3.rs  wrappers.rs  wrappers_1_5_2.rs
docs/: PLAN.md  development.md  fuzzing.md  permission-reduction-post-v1.md
refs/: audit-report.md
refs/narthex-071fec0/: .gitignore  LICENSE  README.md  install.py  uninstall.py
refs/narthex-071fec0/examples/: claude_json.snippet.json  settings.snippet.json
refs/narthex-071fec0/hooks/: audit.py  post_edit.py  post_mcp.py  pre_bash.py
refs/narthex-071fec0/mcp/: server.py
refs/narthex-071fec0/tests/: test_post_hooks.py  test_pre_bash.py
