[workspace]
resolver = "2"
members = ["crates/barbican"]
# `crates/barbican/fuzz/` is the optional layer-2 `cargo-fuzz` crate
# (1.3.0 fuzzing infrastructure). It depends on `libfuzzer-sys`, which
# requires the Rust nightly toolchain — the rest of Barbican is pinned
# to stable 1.91.1 in `rust-toolchain.toml`. Excluding it from the
# workspace keeps `cargo build` and `cargo test` at the repo root
# working on stable. Nightly users run it via:
#     cd crates/barbican && cargo +nightly fuzz run <target>
# See `docs/fuzzing.md` for the full workflow.
exclude = ["crates/barbican/fuzz"]

[workspace.package]
version = "1.3.6"
edition = "2021"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/jdidion/barbican"
description = "Rust port of Narthex: a safety layer for Claude Code hooks and MCP tools."

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Deliberate opt-outs: these pedantic lints collide with a safety tool's
# deliberately-verbose style (explicit matches, explicit types in public APIs).
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# We prose-reference CamelCase Claude Code concepts (PreToolUse, PostToolUse,
# MultiEdit, Bash, Edit, Write) frequently in module docs. The lint wants
# backticks around every one; not worth the review noise for a pedantic
# formatting rule.
doc_markdown = "allow"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
