[workspace]
resolver = "2"
members = ["crates/barbican"]
# `crates/barbican/fuzz/` is the optional layer-2 `cargo-fuzz` crate
# (1.3.0 fuzzing infrastructure). It depends on `libfuzzer-sys`, which
# requires the Rust nightly toolchain — the rest of Barbican is pinned
# to stable 1.91.1 in `rust-toolchain.toml`. Excluding it from the
# workspace keeps `cargo build` and `cargo test` at the repo root
# working on stable. Nightly users run it via:
#     cd crates/barbican && cargo +nightly fuzz run <target>
# See `docs/fuzzing.md` for the full workflow.
exclude = ["crates/barbican/fuzz"]

[workspace.package]
version = "1.5.3"
edition = "2021"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/jdidion/barbican"
homepage = "https://github.com/jdidion/barbican"
description = "Safety layer for Claude Code: classifier-gated bash hook + MCP server blocking dangerous command compositions."
keywords = ["claude-code", "security", "safety", "sandbox", "agent"]
# crates.io categories chosen from the canonical list at
# https://crates.io/category_slugs. "command-line-utilities" is the
# primary (Barbican is invoked as a binary); the security + development
# tools rubrics narrow the audience.
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::testing",
]

[workspace.lints.rust]
# 1.4.0: the wrapper binaries need `libc::signal(SIGINT, SIG_IGN)` +
# matching `pre_exec` SIG_DFL reset to implement transparent-frontend
# SIGINT handling (tested async-signal-safe code; opted in
# module-locally via `#[allow(unsafe_code)]` with a rationale). The
# rest of the crate still denies unsafe; downgrade from `forbid` to
# `deny` so the narrow, justified opt-out compiles.
unsafe_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Deliberate opt-outs: these pedantic lints collide with a safety tool's
# deliberately-verbose style (explicit matches, explicit types in public APIs).
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# We prose-reference CamelCase Claude Code concepts (PreToolUse, PostToolUse,
# MultiEdit, Bash, Edit, Write) frequently in module docs. The lint wants
# backticks around every one; not worth the review noise for a pedantic
# formatting rule.
doc_markdown = "allow"

# Keep `target/` from ballooning: line tables still give file:line panics
# and backtraces, but skip step-through variable info. Typically 40-60%
# smaller `target/` for dev+test builds.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
